--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,4 @@
 [defaults]
 host_key_checking = False
-inventory = /home/student/mycode/agnosticnet/hosts
+inventory = /home/student/reg/hosts
+retry_files_enabled = False
