--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
+library=/home/student/mycode/iib/
 host_key_checking = False
-inventory = /home/student/reg/hosts
 retry_files_enabled = False
